--- a/Experiment/graphSAGE.ipynb
+++ b/Experiment/graphSAGE.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
        "[461043 rows x 36 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,6 @@
        "      <th>label</th>\n",
        "      <th>type</th>\n",
        "      <th>is_train</th>\n",
-       "      <th>h</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1032,7 +1031,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 80549.53026, 1762852, 41933215, OTH, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1042,7 +1040,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[udp, -, 0.0, 0, 0, S0, 0, 1, 63, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1052,7 +1049,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1062,7 +1058,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1072,11 +1067,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[udp, dns, 0.000549, 0, 298, SHR, 0, 0, 0, 2, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1092,7 +1085,6 @@
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, S0, 0, 1, 60, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461039</th>\n",
@@ -1102,7 +1094,6 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 1, 103, 0, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461040</th>\n",
@@ -1112,7 +1103,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 290.371539, 101568, 2592, OTH, 0, 108...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461041</th>\n",
@@ -1122,7 +1112,6 @@
        "      <td>1</td>\n",
        "      <td>9</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 23.190902, 32, 31, SF, 0, 8, 411, 7, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461042</th>\n",
@@ -1132,11 +1121,10 @@
        "      <td>1</td>\n",
        "      <td>9</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 22.872314, 32, 31, SF, 0, 8, 411, 6, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>461043 rows × 7 columns</p>\n",
+       "<p>461043 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1153,35 +1141,36 @@
        "461041  461041   172.30.171.98:60816    104.98.29.100:443      1     9   \n",
        "461042  461042   172.24.250.26:41054    151.101.24.64:443      1     9   \n",
        "\n",
-       "        is_train                                                  h  \n",
-       "0              1  [tcp, -, 80549.53026, 1762852, 41933215, OTH, ...  \n",
-       "1              1  [udp, -, 0.0, 0, 0, S0, 0, 1, 63, 0, 0, 0, 0, ...  \n",
-       "2              0  [tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "3              0  [tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "4              0  [udp, dns, 0.000549, 0, 298, SHR, 0, 0, 0, 2, ...  \n",
-       "...          ...                                                ...  \n",
-       "461038         0  [tcp, -, 0.0, 0, 0, S0, 0, 1, 60, 0, 0, 0, 0, ...  \n",
-       "461039         1  [tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 1, 103, 0, 0...  \n",
-       "461040         1  [tcp, -, 290.371539, 101568, 2592, OTH, 0, 108...  \n",
-       "461041         1  [tcp, -, 23.190902, 32, 31, SF, 0, 8, 411, 7, ...  \n",
-       "461042         1  [tcp, -, 22.872314, 32, 31, SF, 0, 8, 411, 6, ...  \n",
+       "        is_train  \n",
+       "0              1  \n",
+       "1              1  \n",
+       "2              0  \n",
+       "3              0  \n",
+       "4              0  \n",
+       "...          ...  \n",
+       "461038         0  \n",
+       "461039         1  \n",
+       "461040         1  \n",
+       "461041         1  \n",
+       "461042         1  \n",
        "\n",
-       "[461043 rows x 7 columns]"
+       "[461043 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = data[['ID', 'src_ip', 'dst_ip', 'label', 'type', 'is_train', 'h']]\n",
+    "# data = data[['ID', 'src_ip', 'dst_ip', 'label', 'type', 'is_train', 'h']]\n",
+    "data = data[['ID', 'src_ip', 'dst_ip', 'label', 'type', 'is_train']]\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1201,6 @@
        "      <th>type</th>\n",
        "      <th>pred</th>\n",
        "      <th>is_train</th>\n",
-       "      <th>h</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1225,7 +1213,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 80549.53026, 1762852, 41933215, OTH, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1236,7 +1223,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[udp, -, 0.0, 0, 0, S0, 0, 1, 63, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1247,7 +1233,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1258,7 +1243,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1269,11 +1253,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[udp, dns, 0.000549, 0, 298, SHR, 0, 0, 0, 2, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1291,7 +1273,6 @@
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, S0, 0, 1, 60, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461039</th>\n",
@@ -1302,7 +1283,6 @@
        "      <td>6</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 1, 103, 0, 0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461040</th>\n",
@@ -1313,7 +1293,6 @@
        "      <td>1</td>\n",
        "      <td>9</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 290.371539, 101568, 2592, OTH, 0, 108...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461041</th>\n",
@@ -1324,7 +1303,6 @@
        "      <td>9</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 23.190902, 32, 31, SF, 0, 8, 411, 7, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>461042</th>\n",
@@ -1335,11 +1313,10 @@
        "      <td>9</td>\n",
        "      <td>9</td>\n",
        "      <td>1</td>\n",
-       "      <td>[tcp, -, 22.872314, 32, 31, SF, 0, 8, 411, 6, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>461043 rows × 8 columns</p>\n",
+       "<p>461043 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1356,23 +1333,23 @@
        "461041  461041   172.30.171.98:60816    104.98.29.100:443      1     9     7   \n",
        "461042  461042   172.24.250.26:41054    151.101.24.64:443      1     9     9   \n",
        "\n",
-       "        is_train                                                  h  \n",
-       "0              1  [tcp, -, 80549.53026, 1762852, 41933215, OTH, ...  \n",
-       "1              1  [udp, -, 0.0, 0, 0, S0, 0, 1, 63, 0, 0, 0, 0, ...  \n",
-       "2              0  [tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "3              0  [tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "4              0  [udp, dns, 0.000549, 0, 298, SHR, 0, 0, 0, 2, ...  \n",
-       "...          ...                                                ...  \n",
-       "461038         0  [tcp, -, 0.0, 0, 0, S0, 0, 1, 60, 0, 0, 0, 0, ...  \n",
-       "461039         1  [tcp, -, 0.0, 0, 0, OTH, 0, 0, 0, 1, 103, 0, 0...  \n",
-       "461040         1  [tcp, -, 290.371539, 101568, 2592, OTH, 0, 108...  \n",
-       "461041         1  [tcp, -, 23.190902, 32, 31, SF, 0, 8, 411, 7, ...  \n",
-       "461042         1  [tcp, -, 22.872314, 32, 31, SF, 0, 8, 411, 6, ...  \n",
+       "        is_train  \n",
+       "0              1  \n",
+       "1              1  \n",
+       "2              0  \n",
+       "3              0  \n",
+       "4              0  \n",
+       "...          ...  \n",
+       "461038         0  \n",
+       "461039         1  \n",
+       "461040         1  \n",
+       "461041         1  \n",
+       "461042         1  \n",
        "\n",
-       "[461043 rows x 8 columns]"
+       "[461043 rows x 7 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,13 +1595,13 @@
     }
    ],
    "source": [
-    "data['pred_origin'] = df_odd['pred_origin'].values\n",
-    "data"
+    "# data['pred_origin'] = df_odd['pred_origin'].values\n",
+    "# data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1644,7 @@
        "            10,    956]], dtype=int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
