--- a/Experiment/preprocessing.ipynb
+++ b/Experiment/preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "[461043 rows x 45 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        " 'xss'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,6 +1492,49 @@
    "source": [
     "train_data.to_csv('./datasets/TON-IoT/ton_iot_train.csv', index=False)\n",
     "test_data.to_csv('./datasets/TON-IoT/ton_iot_test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 为feature description添加range信息\n",
+    "import json\n",
+    "import numpy as np\n",
+    "feature_description = json.load(open('./datasets/TON-IoT/feature_description.json', 'r'))\n",
+    "for feature in feature_description:\n",
+    "    if feature['is_num']:\n",
+    "        min_val = data[feature['key']].min()\n",
+    "        max_val = data[feature['key']].max()\n",
+    "        feature['range'] = [min_val, max_val]\n",
+    "    else:\n",
+    "        values = np.unique(data[feature['key']])\n",
+    "        values.sort()\n",
+    "        feature['range'] = values.tolist()\n",
+    "json.dump(feature_description, open('./datasets/TON-IoT/feature_description.json', 'w'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.unique(np.array([1,1,2])).to"
    ]
   }
  ],
