--- a/Experiment/gnnexplainer.ipynb
+++ b/Experiment/gnnexplainer.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -850,103 +850,8 @@
      "text": [
       "Using device: cuda\n",
       "Loading model...\n",
-      "tensor([[ 7.9815e-01,  2.6063e-01,  1.6049e+02,  1.2598e-01,  3.3928e+00,\n",
-      "         -6.7989e-01, -4.6211e-03,  4.3083e+02,  7.9999e+01, -8.5059e-03,\n",
-      "         -9.9246e-03,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  1.6049e+02,  1.2598e-01,  3.3928e+00,\n",
-      "         -6.7989e-01, -4.6211e-03,  4.3083e+02,  7.9999e+01, -8.5059e-03,\n",
-      "         -9.9246e-03,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  1.9513e+01,  7.9162e-03,  7.1491e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  5.6100e+01,  1.0468e+01,  4.5244e+01,\n",
-      "          5.9572e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.2194e+01,  1.0546e-02,  8.1615e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  5.7682e+01,  1.0915e+01,  4.1387e+01,\n",
-      "          6.5556e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.1834e+01,  1.0201e-02,  8.0227e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  4.9346e+01,  9.5833e+00,  3.9642e+01,\n",
-      "          6.4104e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  9.7528e+00, -1.5493e-03,  3.5250e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  3.5246e+01,  6.4294e+00,  1.6381e+01,\n",
-      "          2.8346e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.1695e+01,  9.8283e-03,  7.8740e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  8.9671e+01,  1.6083e+01,  5.8455e+01,\n",
-      "          6.7539e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.2358e+01,  1.0712e-02,  8.2151e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  5.8638e+01,  1.1074e+01,  5.0646e+01,\n",
-      "          6.7860e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.2843e+01,  1.1182e-02,  8.4036e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  6.1556e+01,  1.1588e+01,  5.3267e+01,\n",
-      "          6.9951e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  1.9513e+01,  7.9162e-03,  7.1491e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  5.6100e+01,  1.0468e+01,  4.5244e+01,\n",
-      "          5.9572e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.2194e+01,  1.0546e-02,  8.1615e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  5.7682e+01,  1.0915e+01,  4.1387e+01,\n",
-      "          6.5556e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.1834e+01,  1.0201e-02,  8.0227e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  4.9346e+01,  9.5833e+00,  3.9642e+01,\n",
-      "          6.4104e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  9.7528e+00, -1.5493e-03,  3.5250e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  3.5246e+01,  6.4294e+00,  1.6381e+01,\n",
-      "          2.8346e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.1695e+01,  9.8283e-03,  7.8740e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  8.9671e+01,  1.6083e+01,  5.8455e+01,\n",
-      "          6.7539e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.2358e+01,  1.0712e-02,  8.2151e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  5.8638e+01,  1.1074e+01,  5.0646e+01,\n",
-      "          6.7860e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03],\n",
-      "        [ 7.9815e-01,  2.6063e-01,  2.2843e+01,  1.1182e-02,  8.4036e-01,\n",
-      "         -6.7989e-01, -4.6211e-03,  6.1556e+01,  1.1588e+01,  5.3267e+01,\n",
-      "          6.9951e+01,  5.0886e-01,  4.8112e-01,  1.3839e-01,  5.0910e-01,\n",
-      "          4.7310e-01,  4.6947e-01,  4.6730e-01,  2.4579e-02,  2.4210e-02,\n",
-      "          3.8067e-02,  3.8061e-02,  2.2966e-02,  2.1033e-02,  2.2685e-02,\n",
-      "         -5.3905e-03, -3.1033e-03,  1.8893e-02,  6.3073e-03,  1.7101e-03]],\n",
-      "       device='cuda:0')\n",
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], device='cuda:0')\n",
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], device='cuda:0')\n",
       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], device='cuda:0')\n",
       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], device='cuda:0')\n"
      ]
@@ -1003,57 +908,13 @@
     "G = G.to(device)\n",
     "model.eval()\n",
     "\n",
-    "print(G.edata['h'])\n",
-    "\n",
     "pred_origin = model(G, G.ndata['h'], G.edata['h'])\n",
     "pred_feature_masked = model(G, G.ndata['h'], G.edata['h'] * feature_mask)\n",
     "pred_edge_masked = model(G, G.ndata['h'], G.edata['h'] * edge_mask)\n",
     "print(pred_origin.argmax(dim=1))\n",
+    "print(pred_feature_masked.argmax(dim=1))\n",
+    "print(pred_edge_masked.argmax(dim=1))\n",
     "print(G.edata['type'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], device='cuda:0')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred_origin.argmax(dim=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1347.6316,   -87.6523,  1099.8977,   825.2758,  -747.4808,  -171.8368,\n",
-       "         -3119.6948,    27.1718, -2197.7913,   868.5677],\n",
-       "        [ 1434.4696,  -169.2266,  1190.9534,   956.7336,  -616.3792,  -179.2522,\n",
-       "         -3241.8501,   -25.9766, -2122.6528,   932.7032]], device='cuda:0',\n",
-       "       grad_fn=<IndexBackward0>)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred_origin[G.edata['ID'] == 0]"
    ]
   },
   {
@@ -1062,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_mask_loss(g, pred_cur, feature_mask, edge_mask, eid):\n",
+    "def feature_mask_loss(g, pred_origin, pred_feature_masked, feature_mask, eid):\n",
     "    coeffs = {\n",
     "        \"pred\": 3.0,\n",
     "        \"feat_size\": 1.0,\n",
@@ -1110,13 +971,13 @@
     }
    ],
    "source": [
-    "result_df = pd.DataFrame(columns=['ID', 'type'])\n",
+    "# result_df = pd.DataFrame(columns=['ID', 'type'])\n",
     "\n",
-    "result_df['ID'] = th.tensor(G.edata['ID']).cpu().detach().numpy()\n",
-    "result_df['type'] = th.tensor(G.edata['type']).cpu().detach().numpy()\n",
-    "result_df['pred_origin'] = pred_origin.cpu().detach().numpy().tolist()\n",
-    "result_df['pred_feature_masked'] = pred_feature_masked.cpu().detach().numpy().tolist()\n",
-    "result_df['pred_edge_masked'] = pred_edge_masked.cpu().detach().numpy().tolist()"
+    "# result_df['ID'] = th.tensor(G.edata['ID']).cpu().detach().numpy()\n",
+    "# result_df['type'] = th.tensor(G.edata['type']).cpu().detach().numpy()\n",
+    "# result_df['pred_origin'] = pred_origin.cpu().detach().numpy().tolist()\n",
+    "# result_df['pred_feature_masked'] = pred_feature_masked.cpu().detach().numpy().tolist()\n",
+    "# result_df['pred_edge_masked'] = pred_edge_masked.cpu().detach().numpy().tolist()"
    ]
   },
   {
@@ -1347,7 +1208,7 @@
     }
    ],
    "source": [
-    "result_df"
+    "# result_df"
    ]
   }
  ],
