--- a/Experiment/test.ipynb
+++ b/Experiment/test.ipynb
@@ -408,6 +408,28 @@
     "\n",
     "random.random()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.231, 0.02, 3.0]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"[1.231,2e-2,3]\"\n",
+    "a_list = list(map(float, a[1:-1].split(',')))\n",
+    "a_list"
+   ]
   }
  ],
  "metadata": {
